fixed server error

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 URL = http://localhost:5173
 PORT = 8080
+
+MONGO_URI= mongodb+srv://root:root@instagram.jqaukke.mongodb.net/?retryWrites=true&w=majority&appName=instagram
