fixed sharp error

--- a/.env
+++ b/.env
@@ -4,9 +4,9 @@ MONGO_URI= mongodb+srv://root:root@instagram.jqaukke.mongodb.net/?retryWrites=tr
 JWT_SECRET_KEY = KEJOIJOMCSD9UOEHNNOVAG
 
 # claudinary 
-CLOUD_NAME = dqcynwnbo
-API_SECRET = 1mpZTTF0AHOq-2KhcelNirNnYd8
-API_KEY = 758754771716913
+CLOUD_NAME=dqcynwnbo
+API_SECRET=1mpZTTF0AHOq-2KhcelNirNnYd8
+API_KEY=758754771716913
 
 
 
